2006-01-20 02:51:57  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed doc/index.html.
  * Greatly improve script hook documentation.

2006-01-20 01:30:08  Sean Middleditch <elanthis@awesomeplay.com>

  * Changed the control socket protocol's quote characters from {}
    to "" to make scripting easier.
  * Added a 'login' command to the control socket protocol.
  * Add tools/awemud-control.inc.php (COMPLETELY UNTESTED!) so
    web developers can easily make use of AweMUD control interface.
  * Incorporated doc/control.txt into the AweMUD Manual.
  * Removed massroom.pl, dear is it old.
  * Removed awemud.6 manpage, totally out of date.

2006-01-19 20:47:55  Sean Middleditch <elanthis@awesomeplay.com>

  * Update the command document in the script guide to be accurate.
  * Update the FAQ.
  * Created awemud-manual.xml and ch-introduction.xml and renamed
    script-guide.xml to ch-scripting.xml.  Goal is to build all
    documentation as a single AweMUD Manual document.

2006-01-18 21:26:13  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed player titles.
  * Revamped entity name handling.

2006-01-18 18:29:13  Sean Middleditch <elanthis@awesomeplay.com>

  * Build fixes.
  * Update tools for Cogito/GIT usage.

2006-01-15 20:38:12  Sean Middleditch <elanthis@awesomeplay.com>

  * Release 0.24.

2006-01-15 20:29:02  Sean Middleditch <elanthis@awesomeplay.com>

  * The admin-guide and user-guide haven't been updated in years,
    and I'm not likely to ever do so again anytime soon, so they
    are now gone.

2006-01-15 19:33:32  Sean Middleditch <elanthis@awesomeplay.com>

  * Moved ScriptFunction into the Scriptix headers.
  * Rename Scriptix struct 'members' to struct 'properties'.
  * Added a Scriptix::Native type to replace the AweMUD Scriptable
    type.
  * Renamed mud/scripts.[h,cc] to mud/bindings.[h,cc], since that's
    all that code handles now.
  * Require explicit inclusion of hooks.h.