@@ -1,0 +1,5 @@
+<!DOCTYPE chatper PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd">
+<chapter id="ch_installation">
+  <title>Installation</title>
+</chapter>
+<!-- vim: set filetype=xml shiftwidth=2 tabstop=2 expandtab : -->
