@@ -590,72 +590,4 @@ namespace parse {
 
 		return stream;
 	}
-
-	// parse a prompt
-	const char *
-	prompt (const char *in, const ::Character *ch) {
-		static char out[PARSE_OUT_SIZE];
-		char result[40];
-		char *oc = out;
-
-		// until end
-		for (; *in != '\0'; ++ in) {
-			// found a %?
-			if (*in == '%') {
-				++ in;
-				// %% = %
-				if (*in == '%') {
-					if (oc - out < PARSE_OUT_SIZE - 1) {
-						*(oc ++) = '%';
-					}
-				} else {
-					// append expanasion
-					result[0] = '\0';
-					switch (*in) {
-						// our name
-						case 'n':
-							snprintf (result, sizeof(result), "%s", ch->get_name().get_text().c_str());
-							break;
-						// current health
-						case 'h':
-							snprintf (result, sizeof(result), "%d", ch->get_hp ());
-							break;
-						// max health
-						case 'H':
-							snprintf (result, sizeof(result), "%d", ch->get_max_hp ());
-							break;
-						// round time
-						case 'R':
-							snprintf (result, sizeof(result), "%u", ch->get_round_time ());
-							break;
-						// game time
-						case 't':
-							snprintf (result, sizeof(result), "%s", TimeManager.time.time_str().c_str());
-							break;
-						// game date
-						case 'D':
-							snprintf (result, sizeof(result), "%s", TimeManager.time.date_str().c_str());
-							break;
-					}
-					// do append
-					if (result[0] != '\0') {
-						int len = strlen (result);
-						if (len > PARSE_OUT_SIZE - (oc - out) - 1)
-							len = PARSE_OUT_SIZE - (oc - out) - 1;
-						strncpy (oc, result, len);
-						oc += len;
-					}
-				}
-			} else {
-				// append character
-				if (oc - out < PARSE_OUT_SIZE - 1) {
-					*(oc ++) = *in;
-				}
-			}
-		}
-
-		// finish up
-		*oc = '\0';
-		return out;
-	}
 }
